scripts/nullaway/annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8.txt
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/LinuxOption.java:18: error: [NullAway] initializer method does not guarantee @NonNull fields dtb (line 13), kimage (line 14), initrd (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public LinuxOption() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/ProxyOption.java:30: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return proxyHost;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:136: error: [NullAway] dereferenced expression inst is @Nullable
        setRegRaw(15, getRegRaw(15) + inst.getLength());
                                          ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/arm/core/ARMv5.java:938: error: [NullAway] passing @Nullable parameter 'inst' where @NonNull is required
        decinst = decode(inst);
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/MasterCore.java:20: error: [NullAway] @NonNull field slaveBus not initialized
    private Bus slaveBus;
                ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/Bus.java:461: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return slave;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/NormalINTC.java:28: error: [NullAway] initializer method does not guarantee @NonNull field intSrcs (line 16) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public NormalINTC(int n) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/MainApplet.java:33: error: [NullAway] initializer method does not guarantee @NonNull fields tabPane (line 25), panel (line 26), stdoutPanel (line 27), linuxOptPanel (line 28), proxyOptPanel (line 29) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public MainApplet() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/generic/Flush16.java:269: error: [NullAway] initializer method does not guarantee @NonNull field wordsCFI (line 24) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Flush16(int size) {
           ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url3aa01d34ec_katsuster_ememu_tgz-pJ8-net_katsuster_ememu_ui_MainJ8/src/net/katsuster/ememu/ui/MainApplet.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
9 errors
